# algoritmic_lang

./: .gitignore  README.md
Info/: generate_data.py  regions_data.txt
Karchenko_alg_lab/: CMakeLists.txt  func.cpp  func.h  gt_system.cpp  gt_system.h  main.cpp  new_menu.cpp  pipe.cpp  pipe.h  res.pages  station.cpp  station.h
alg_lab/: CMakeLists.txt  e  func.cpp  func.h  graph.cpp  graph.h  gt_system.cpp  gt_system.h  main.cpp  new_menu.h  pipe.cpp  pipe.h  res.pages  rus  rus1  rus2  rus3  station.cpp  station.h
